--- a/UI/views/Admin/viewSingleApplication.html
+++ b/UI/views/Admin/viewSingleApplication.html
@@ -120,7 +120,7 @@
 
       <main class="main-content cp">
         <div class="complete-profile box">
-          <form action="/" method="POST">
+          <form action="./adminDashboard.html" method="POST">
             <div class="form-header">
             <span><h3>Loan Application</h3></span>
           </div>
@@ -142,24 +142,24 @@
                  
                <div class="profile fullname">
                 <label class="fullname" for="name">Full Name</label>
-                <input class="profile-Input" type="text" name="name" placeholder="" readonly>
+                <input class="profile-Input" type="text" name="name" placeholder="" readonly value="Feric Wanje">
                </div>
                 <div class="profile id">
                   <label class="id" for="id">ID Number</label>
-                  <input class="profile-Input" type="text" name="id" placeholder="" readonly>
+                  <input class="profile-Input" type="text" name="id" placeholder="" readonly value="584284522">
                 </div>
                 <div class="profile nationality">
                   <label class="nationality" for="nationality">Nationality</label>
-                  <input class="profile-Input" type="text" name="nationality" placeholder="" readonly>
+                  <input class="profile-Input" type="text" name="nationality" placeholder="" readonly value="Kenyan">
                 </div>
                 
                 <div class="profile telephone">
                       <label class="telephone" for="telephone">Telephone</label>
-                      <input class="profile-Input" type="text" name="telephone" placeholder="" readonly>
+                      <input class="profile-Input" type="text" name="telephone" placeholder="" readonly value="01784255893">
                  </div>
                  <div class="profile curr_address">
                     <label class="curr-address" for="current-address">Current Address</label>
-                    <input class="profile-Input" type="text" name="current-address" placeholder="" readonly>
+                    <input class="profile-Input" type="text" name="current-address" placeholder="" readonly value="Kampala">
                   </div>
              </div>
             </div>
@@ -172,24 +172,24 @@
 
             <div class="profile amount">
                 <label class=" amount" for="amnt-applied">Amount Applied</label>
-                <input class="profile-Input" type="text" name="amnt-applied" placeholder="" readonly>
+                <input class="profile-Input" type="text" name="amnt-applied" placeholder="" readonly value="80000">
             </div>
             <div class="profile pay-period">
                   <label class="pay-period" for="pay-period">Payment Period</label>
-                  <input class="profile-Input" type="text" name="pay-period" placeholder="" readonly>
+                  <input class="profile-Input" type="text" name="pay-period" placeholder="" readonly value="12 months">
             </div>
             <div class="profile intrst-rate">
-                    <label class="intrst-rate" for="interest-rate">Interest Rate</label>
-                    <input class="profile-Input" type="text" name="interest-rate" placeholder="" readonly>
+                    <label class="intrst-rate" for="interest-rate">Interest</label>
+                    <input class="profile-Input" type="text" name="interest-rate" placeholder="" readonly value="4000">
             </div>
             <div class="profile amnt-pbl">
                     <label class="amnt-pbl" for="amnt-pbl">Amount Payable</label>
-                    <input class="profile-Input" type="text" name="amnt-pbl" placeholder="" readonly>
+                    <input class="profile-Input" type="text" name="amnt-pbl" placeholder="" readonly value="84000">
             </div>
 
             <div class="profile dt-applied">
                 <label class="dt-applied" for="dt-applied">Date Applied</label>
-            <input class="profile-Input" type="date" name="dt-applied" placeholder="" readonly>
+            <input class="profile-Input" type="text" name="dt-applied" placeholder="" readonly value="26/10/2018">
              </div>
             
             </div>
