--- a/UI/views/Client/paymentHistory.html
+++ b/UI/views/Client/paymentHistory.html
@@ -92,10 +92,7 @@
               <span>Settings</span>
               <img class="caret-down" src="../../assets/imgs/caret-down.png" />
             </button>
-            <div class="settings-container">
-              <a href="./completeProfile.html">Complete Profile</a><br /><br />
-              <a href="./userProfile.html">View Profile</a>
-            </div>
+            <div class="settings-container"></div>
           </li>
         </ul>
       </aside>
