--- a/UI/views/Client/completeProfile.html
+++ b/UI/views/Client/completeProfile.html
@@ -99,7 +99,7 @@
               </button>
               <div class="settings-container">
                 <a href="./completeProfile.html">Complete Profile</a><br /><br />
-                <a href="./userProfile.html">View Profile</a>
+				<a href="./userProfile.html">Profile</a>
               </div>
             </li>
           </ul>
@@ -115,7 +115,7 @@
 
       <main class="main-content cp">
         <div class="complete-profile box">
-          <form action="/" method="POST">
+          <form action="./clientDashboard.html" method="POST">
             <div class="form-header">
             <span><h3>Please Complete Your Profile</h3></span>
           </div>
@@ -130,26 +130,17 @@
               <img class="user-image" src="" id="image"></img>
               <input class="img" type="file" onchange="showImage.call(this)"
               />
-              <div class="profile title">
-                <label class="gender " for="gender">Title</label>
-                <select class="profile-Input" name="gender">
-                    <option value="null">Select...</option>
-                    <option value="male">Male</option>
-                    <option value="female">Female</option>
-                    <option value="other">Other</option>
-                  </select>
-              </div>
               <div class="profile fullname">
                 <label class="fullname" for="name">Full Name</label>
-                <input class="profile-Input" type="text" name="name" placeholder="Full name">
+                <input class="profile-Input" type="text" name="name" placeholder="Full name" required>
               </div>
               <div class="profile id">
                   <label class="id" for="id">ID Number</label>
-                  <input class="profile-Input" type="text" name="id" placeholder="Id Number">
+                  <input class="profile-Input" type="text" name="id" placeholder="Id Number" required>
                 </div>
                   <div class="profile telephone">
                       <label class="telephone" for="telephone">Telephone</label>
-                      <input class="profile-Input" type="number" name="telephone" placeholder="070000000">
+                      <input class="profile-Input" type="number" name="telephone" placeholder="070000000" required>
                     </div>
             </div>
 
@@ -162,15 +153,15 @@
                 <div class="lineBorder"><span>Residence</span></div>
 				<div class="profile nationality">
                   <label class="nationality" for="nationality">Nationality</label>
-                  <input class="profile-Input" type="text" name="nationality" placeholder="Nationality">
+                  <input class="profile-Input" type="text" name="nationality" placeholder="Nationality" required>
                 </div>
                 <div class="profile curr_address">
                     <label class="curr-address" for="current-address">Current Address</label>
-                    <input class="profile-Input" type="text" name="current-address" placeholder="Current residence">
+                    <input class="profile-Input" type="text" name="current-address" placeholder="Current residence" required>
                   </div>
                   <div class="profile len_stay">
                       <label class="len_stay" for="length-stay">Length Of Stay</label>
-                      <input class="profile-Input" type="number" name="length-stay" placeholder="Length Of Stay">
+                      <input class="profile-Input" type="number" name="length-stay" placeholder="Length Of Stay" required>
                     </div>
                     <div class="profile type_of_residence">
                         <label class="type_of_residence " for="type_res">Type Of Residence</label>
@@ -202,22 +193,24 @@
             </div>
             <div class="profile curr-emp">
                 <label class="curr-emp" for="current-employer">Current Employer</label>
-                <input class="profile-Input" type="text" name="current-employer" placeholder="Andela">
+                <input class="profile-Input" type="text" name="current-employer" placeholder="Andela" required>
               </div>
               <div class="profile emp-add">
                   <label class="emp-add" for="employer-address">Employer Address</label>
-                  <input class="profile-Input" type="text" name="employer-address" placeholder="11th street">
+                  <input class="profile-Input" type="text" name="employer-address" placeholder="11th street" required>
                 </div>
                 <div class="profile emp-tel">
                     <label class="emp-tel" for="emp-telephone">Employer Telephone</label>
-                    <input class="profile-Input" type="number" name="emp-telephone" placeholder="070000000">
+                    <input class="profile-Input" type="number" name="emp-telephone" placeholder="070000000" required>
                   </div>
             
             </div>
       <!--End of work info section-->
           </div>
-            <div class="m2 input">
-              <a class="primary-btn cp" href="#">Update</a>
+             <div class="m2 input">
+              <button class="primary-btn cp" type="submit">
+                Update
+              </button>
             </div>
           </form>
         </div>
