--- a/UI/views/adminLogin.html
+++ b/UI/views/adminLogin.html
@@ -21,7 +21,7 @@
 
     <div class="container">
       <div class="login-form box">
-        <form action="./Admin/adminDashboard.html" method="POST">
+        <form action="./Admin/adminDashboard" method="POST">
           <div class="container">
             <h3 class="md-text">Admin Login</h3>
             <div class="reg input">
