--- a/UI/views/userLogin.html
+++ b/UI/views/userLogin.html
@@ -23,7 +23,7 @@
       <div class="login-form box">
         <form
           name="login"
-          action="./Client/clientDashboard"
+          action="Client/clientDashboard"
           method="POST"
           onsubmit="return(validate())"
         >
