--- a/UI/views/userLogin.html
+++ b/UI/views/userLogin.html
@@ -23,9 +23,9 @@
       <div class="login-form box">
         <form
           name="login"
-          action="Client/clientDashboard"
-          method="POST"
-          onsubmit="return(validate())"
+          action="../views/Client/clientDashboard.html"
+          method=""
+
         >
           <div class="container">
             <h3 class="md-text">User Login</h3>
