[Chore #165966279] Update login link

--- a/UI/views/register.html
+++ b/UI/views/register.html
@@ -23,7 +23,7 @@
 
     <div class="container">
       <div class="register-form box">
-        <form action="../views/userLogin.html" method="POST">
+        <form action="../views/userLogin.html" method="">
           <div class="container">
             <h3 class="md-text">Register</h3>
             <div class="reg input">
