[Chore #165966279] Update gh-pages links

--- a/UI/views/Admin/clientProfile.html
+++ b/UI/views/Admin/clientProfile.html
@@ -59,7 +59,7 @@
    
           <ul>
             <li>
-              <a href="./adminDashboard.html">
+              <a href="../Admin/adminDashboard.html">
                 <span><img src="../../assets/imgs/user.png"/></span>
                 <span>Dashboard</span>
               </a>
