--- a/UI/views/Admin/payLoan.html
+++ b/UI/views/Admin/payLoan.html
@@ -114,7 +114,7 @@
 
       <main class="main-content ">
         <div class="loan-application box">
-          <form name="loanApp" action="./adminDashboard.html" method="POST">
+          <form name="loanApp" action="../Admin/adminDashboard.html" method="">
             <span><h3>Loan Payment</h3></span>
             <div class="lineBorder"></div>
 
