--- a/UI/views/Admin/viewSingleApplication.html
+++ b/UI/views/Admin/viewSingleApplication.html
@@ -120,7 +120,7 @@
 
       <main class="main-content cp">
         <div class="complete-profile box">
-          <form action="./adminDashboard.html" method="POST">
+          <form action="../Admin/adminDashboard.html" method="">
             <div class="form-header">
             <span><h3>Loan Application</h3></span>
           </div>
