--- a/UI/views/Client/loanApplication.html
+++ b/UI/views/Client/loanApplication.html
@@ -109,7 +109,7 @@
 
       <main class="main-content">
         <div class="loan-application box">
-          <form action="./clientDashboard.html" method="POST">
+          <form action="../Client/" method="">
             <span><h3>Credit Details</h3></span>
             <div class="lineBorder"></div>
             <div class="loan input">
