--- a/UI/views/Client/makePayment.html
+++ b/UI/views/Client/makePayment.html
@@ -109,7 +109,11 @@
 
       <main class="main-content ">
         <div class="loan-application box">
-          <form name="loanApp" action="./clientDashboard.html" method="POST">
+          <form
+            name="loanApp"
+            action="../Client/clientDashboard.html"
+            method=""
+          >
             <span><h3>Loan Payment</h3></span>
             <div class="lineBorder"></div>
             <div class="loan input">
