--- a/UI/views/Client/userProfile.html
+++ b/UI/views/Client/userProfile.html
@@ -115,7 +115,7 @@
 
       <main class="main-content">
         <div class="complete-profile box">
-          <form action="./clientDashboard.html" method="POST">
+          <form action="../Client/clientDashboard.html" method="">
             <div class="form-header">
             <span><h3>User Profile</h3></span>
           </div>
