--- a/UI/views/Client/clientDashboard.html
+++ b/UI/views/Client/clientDashboard.html
@@ -97,7 +97,7 @@
               </button>
               <div class="settings-container">
                 <a href="./completeProfile.html">Complete Profile</a><br><br>
-				<a href="./userProfile.html">Complete Profile</a>
+				<a href="./userProfile.html"> Profile</a>
               </div>
             </li>
           </ul>
